--- a/TvShowReminder.TvRageApi.IntegrationTests/TvShowReminder.TvRageApi.IntegrationTests.csproj
+++ b/TvShowReminder.TvRageApi.IntegrationTests/TvShowReminder.TvRageApi.IntegrationTests.csproj
@@ -42,6 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EpisodeListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchTests.cs" />
   </ItemGroup>
