--- a/TvShowReminder.TvRageApi/TvShowReminder.TvRageApi.csproj
+++ b/TvShowReminder.TvRageApi/TvShowReminder.TvRageApi.csproj
@@ -39,10 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Episode.cs" />
+    <Compile Include="EpisodeList.cs" />
+    <Compile Include="EpisodeListParser.cs" />
     <Compile Include="HttpClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchResultParser.cs" />
     <Compile Include="Show.cs" />
+    <Compile Include="SpecialEpisode.cs" />
     <Compile Include="TvRageFeedUrls.cs" />
     <Compile Include="TvRageService.cs" />
   </ItemGroup>
