--- a/TvShowReminder.TvRageApi/TvShowReminder.TvRageApi.csproj
+++ b/TvShowReminder.TvRageApi/TvShowReminder.TvRageApi.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Domain\EpisodeList.cs" />
     <Compile Include="Domain\Show.cs" />
     <Compile Include="Domain\SpecialEpisode.cs" />
+    <Compile Include="ITvRageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TvRageFeedUrls.cs" />
     <Compile Include="TvRageService.cs" />
