--- a/TvShowReminder/packages.config
+++ b/TvShowReminder/packages.config
@@ -5,4 +5,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net45" />
 </packages>
