--- a/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
+++ b/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{20E3BE97-FAB2-4A4D-BC54-DDDAE1750F85}</ProjectGuid>
+    <ProjectGuid>{B8B3F7E5-E4B7-4B9B-970B-03EF16B25EB9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TvShowReminder.Service</RootNamespace>
-    <AssemblyName>TvShowReminder.Service</AssemblyName>
+    <RootNamespace>TvShowReminder.DataSource</RootNamespace>
+    <AssemblyName>TvShowReminder.DataSource</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper">
+      <HintPath>..\packages\Dapper.1.38\lib\net45\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,25 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISubscriptionCommandService.cs" />
-    <Compile Include="ISubscriptionQueryService.cs" />
+    <Compile Include="ISubscriptionCommandDataSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubscriptionCommandService.cs" />
-    <Compile Include="SubscriptionQueryService.cs" />
+    <Compile Include="SubscriptionCommandDataSource.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TvShowReminder.DataSource\TvShowReminder.DataSource.csproj">
-      <Project>{b8b3f7e5-e4b7-4b9b-970b-03ef16b25eb9}</Project>
-      <Name>TvShowReminder.DataSource</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TvShowReminder.Model\TvShowReminder.Model.csproj">
-      <Project>{91180dc8-f1d5-419d-a493-e18b56ef195e}</Project>
-      <Name>TvShowReminder.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TvShowReminder.TvRageApi\TvShowReminder.TvRageApi.csproj">
-      <Project>{75089242-70be-45af-8b06-037921acfda5}</Project>
-      <Name>TvShowReminder.TvRageApi</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
