--- a/TvShowReminder.Model/TvShowReminder.Model.csproj
+++ b/TvShowReminder.Model/TvShowReminder.Model.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\AddSubscriptionCommand.cs" />
     <Compile Include="Dto\TvShow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\SearchTvShowQuery.cs" />
