--- a/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
+++ b/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
@@ -43,8 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ISubscriptionCommandDataSource.cs" />
+    <Compile Include="ISubscriptionQueryDataSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubscriptionCommandDataSource.cs" />
+    <Compile Include="SubscriptionQueryDataSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
