--- a/TvShowReminder.DatabaseMigrations/TvShowReminder.DatabaseMigrations.csproj
+++ b/TvShowReminder.DatabaseMigrations/TvShowReminder.DatabaseMigrations.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ISqlDatabaseMigrator.cs" />
+    <Compile Include="Migrations\Iteration1\Migration100CreateEpisodesTable.cs" />
     <Compile Include="Migrations\Iteration1\Migration100CreateSubscriptionTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlDatabaseMigrator.cs" />
