--- a/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
+++ b/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EpisodeCommandDataSource.cs" />
+    <Compile Include="IEpisodeCommandDataSource.cs" />
     <Compile Include="ISubscriptionCommandDataSource.cs" />
     <Compile Include="ISubscriptionQueryDataSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -50,6 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TvShowReminder.Model\TvShowReminder.Model.csproj">
+      <Project>{91180dc8-f1d5-419d-a493-e18b56ef195e}</Project>
+      <Name>TvShowReminder.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
