--- a/TvShowReminder.Service/TvShowReminder.Service.csproj
+++ b/TvShowReminder.Service/TvShowReminder.Service.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EpisodesCommandService.cs" />
+    <Compile Include="IEpisodesCommandService.cs" />
     <Compile Include="ISubscriptionCommandService.cs" />
     <Compile Include="ISubscriptionQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
