--- a/TvShowReminder.Model/TvShowReminder.Model.csproj
+++ b/TvShowReminder.Model/TvShowReminder.Model.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\AddSubscriptionCommand.cs" />
+    <Compile Include="Dto\Episode.cs" />
+    <Compile Include="Dto\Subscription.cs" />
     <Compile Include="Dto\TvShow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\SearchTvShowQuery.cs" />
