--- a/TvShowReminder.TvRageApi/TvShowReminder.TvRageApi.csproj
+++ b/TvShowReminder.TvRageApi/TvShowReminder.TvRageApi.csproj
@@ -39,10 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\Episode.cs" />
-    <Compile Include="Domain\EpisodeList.cs" />
+    <Compile Include="Domain\TvRageEpisode.cs" />
+    <Compile Include="Domain\TvRageEpisodeList.cs" />
     <Compile Include="Domain\Show.cs" />
-    <Compile Include="Domain\SpecialEpisode.cs" />
+    <Compile Include="Domain\TvRageSpecialEpisode.cs" />
     <Compile Include="ITvRageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TvRageFeedUrls.cs" />
