--- a/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
+++ b/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EpisodesCommandServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubscriptionQueryServiceTests.cs" />
   </ItemGroup>
