--- a/TvShowReminder.Model/TvShowReminder.Model.csproj
+++ b/TvShowReminder.Model/TvShowReminder.Model.csproj
@@ -41,9 +41,12 @@
   <ItemGroup>
     <Compile Include="Command\AddSubscriptionCommand.cs" />
     <Compile Include="Dto\Episode.cs" />
+    <Compile Include="Dto\EpisodesToDateResult.cs" />
+    <Compile Include="Dto\EpisodeWithSubscriptionInfoDto.cs" />
     <Compile Include="Dto\Subscription.cs" />
     <Compile Include="Dto\TvShow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\EpisodesToDateQuery.cs" />
     <Compile Include="Query\SearchTvShowQuery.cs" />
     <Compile Include="Response\SearchTvShowResult.cs" />
   </ItemGroup>
