--- a/TvShowReminder.Model/TvShowReminder.Model.csproj
+++ b/TvShowReminder.Model/TvShowReminder.Model.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\EpisodesToDateQuery.cs" />
     <Compile Include="Query\SearchTvShowQuery.cs" />
+    <Compile Include="Response\GetAllSubscriptionsResult.cs" />
     <Compile Include="Response\SearchTvShowResult.cs" />
   </ItemGroup>
   <ItemGroup />
