--- a/TvShowReminder/TvShowReminder.csproj
+++ b/TvShowReminder/TvShowReminder.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Models\EpisodeListViewModel.cs" />
     <Compile Include="Models\SearchViewModel.cs" />
+    <Compile Include="Models\SubscriptionsListViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup\Modules\DataSourceModule.cs" />
     <Compile Include="Startup\Modules\ServiceModule.cs" />
@@ -120,6 +121,7 @@
     <Content Include="Views\Subscription\Search.cshtml" />
     <Content Include="Views\Subscription\_SearchHits.cshtml" />
     <Content Include="Views\Subscription\Add.cshtml" />
+    <Content Include="Views\Subscription\List.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
