--- a/TvShowReminder/Web.config
+++ b/TvShowReminder/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MasterPassword" value="replace-me" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLExpress;Initial Catalog=tvshowreminder_db;Integrated Security=SSPI" />
@@ -17,6 +18,10 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <globalization uiCulture="sv-SE" culture="sv-SE" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Auth/Login" name=".ASPXFORMSAUTH">
+      </forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
