--- a/TvShowReminder/Web.config
+++ b/TvShowReminder/Web.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.5" />
     <globalization uiCulture="sv-SE" culture="sv-SE" />
     <authentication mode="Forms">
-      <forms loginUrl="/Auth/Login" name=".ASPXFORMSAUTH">
+      <forms loginUrl="/Auth/Login" name=".ASPXFORMSAUTH" timeout="10080" slidingExpiration="true">
       </forms>
     </authentication>
   </system.web>
