Add possibility to delete subscriptions

--- a/TvShowReminder.Model/TvShowReminder.Model.csproj
+++ b/TvShowReminder.Model/TvShowReminder.Model.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\AddSubscriptionCommand.cs" />
+    <Compile Include="Command\DeleteSubscriptionCommand.cs" />
     <Compile Include="Dto\Episode.cs" />
     <Compile Include="Dto\EpisodesToDateResult.cs" />
     <Compile Include="Dto\EpisodeWithSubscriptionInfoDto.cs" />
