Move db connection handling to proper place

--- a/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
+++ b/TvShowReminder.DataSource/TvShowReminder.DataSource.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbConnectionHelper.cs" />
     <Compile Include="EpisodeCommandDataSource.cs" />
     <Compile Include="EpisodesQueryDataSource.cs" />
+    <Compile Include="IDbConnectionHelper.cs" />
     <Compile Include="IEpisodeCommandDataSource.cs" />
     <Compile Include="IEpisodesQueryDataSource.cs" />
     <Compile Include="ISubscriptionCommandDataSource.cs" />
