--- a/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
+++ b/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
@@ -45,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddSubscriptionCommandHandlerTests.cs" />
+    <Compile Include="DeleteEpisodesCommandHandlerTests.cs" />
     <Compile Include="EpisodesCommandServiceTests.cs" />
     <Compile Include="EpisodesQueryServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
