--- a/TvShowReminder/TvShowReminder.csproj
+++ b/TvShowReminder/TvShowReminder.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SubscriptionController.cs" />
+    <Compile Include="Framework\ICommandSender.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -108,6 +109,7 @@
     <Compile Include="Startup\Modules\DataSourceModule.cs" />
     <Compile Include="Startup\Modules\ServiceModule.cs" />
     <Compile Include="Startup\Modules\StartupTaskModule.cs" />
+    <Compile Include="Startup\Modules\UtilitiesModule.cs" />
     <Compile Include="Startup\Tasks\DatabaseMigrationTask.cs" />
   </ItemGroup>
   <ItemGroup>
