--- a/TvShowReminder.Contracts/TvShowReminder.Contracts.csproj
+++ b/TvShowReminder.Contracts/TvShowReminder.Contracts.csproj
@@ -44,16 +44,18 @@
     <Compile Include="Command\DeleteSubscriptionCommand.cs" />
     <Compile Include="Command\RefreshEpisodesCommand.cs" />
     <Compile Include="Dto\Episode.cs" />
-    <Compile Include="Dto\EpisodesToDateResult.cs" />
     <Compile Include="Dto\EpisodeWithSubscriptionInfoDto.cs" />
     <Compile Include="Dto\Subscription.cs" />
     <Compile Include="Dto\SubscriptionWithNextEpisodeDto.cs" />
     <Compile Include="Dto\TvShow.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="ICommandHandler.cs" />
+    <Compile Include="IQuery.cs" />
+    <Compile Include="IQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\EpisodesToDateQuery.cs" />
     <Compile Include="Query\SearchTvShowQuery.cs" />
+    <Compile Include="Response\EpisodesToDateResult.cs" />
     <Compile Include="Response\GetAllSubscriptionsWithNextEpisodeResult.cs" />
     <Compile Include="Response\SearchTvShowResult.cs" />
   </ItemGroup>
