--- a/TvShowReminder.Service/TvShowReminder.Service.csproj
+++ b/TvShowReminder.Service/TvShowReminder.Service.csproj
@@ -48,6 +48,8 @@
     <Compile Include="ISubscriptionCommandService.cs" />
     <Compile Include="ISubscriptionQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\EpisodesToDateQueryHandler.cs" />
+    <Compile Include="Query\SearchTvShowQueryHandler.cs" />
     <Compile Include="SubscriptionCommandService.cs" />
     <Compile Include="SubscriptionQueryService.cs" />
   </ItemGroup>
@@ -65,6 +67,7 @@
       <Name>TvShowReminder.TvRageApi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
