--- a/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
+++ b/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
@@ -49,7 +49,9 @@
     <Compile Include="DeleteEpisodesCommandHandlerTests.cs" />
     <Compile Include="EpisodesCommandServiceTests.cs" />
     <Compile Include="EpisodesQueryServiceTests.cs" />
+    <Compile Include="EpisodesToDateQueryHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchTvShowQueryHandlerTests.cs" />
     <Compile Include="SubscriptionCommandServiceTests.cs" />
     <Compile Include="SubscriptionQueryServiceTests.cs" />
   </ItemGroup>
