--- a/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
+++ b/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AddSubscriptionCommandHandlerTests.cs" />
     <Compile Include="DeleteEpisodesCommandHandlerTests.cs" />
+    <Compile Include="DeleteSubscriptionCommandHandlerTests.cs" />
     <Compile Include="EpisodesCommandServiceTests.cs" />
     <Compile Include="EpisodesToDateQueryHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
