Create query handler for subscription list

--- a/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
+++ b/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddSubscriptionCommandHandlerTests.cs" />
+    <Compile Include="AllSubscriptionsWithNextEpisodeQueryHandlerTests.cs" />
     <Compile Include="DeleteEpisodesCommandHandlerTests.cs" />
     <Compile Include="DeleteSubscriptionCommandHandlerTests.cs" />
     <Compile Include="EpisodesCommandServiceTests.cs" />
