--- a/TvShowReminder.Contracts/TvShowReminder.Contracts.csproj
+++ b/TvShowReminder.Contracts/TvShowReminder.Contracts.csproj
@@ -54,9 +54,10 @@
     <Compile Include="IQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\EpisodesToDateQuery.cs" />
+    <Compile Include="Query\AllSubscriptionsWithNextEpisodeQuery.cs" />
     <Compile Include="Query\SearchTvShowQuery.cs" />
     <Compile Include="Response\EpisodesToDateResult.cs" />
-    <Compile Include="Response\GetAllSubscriptionsWithNextEpisodeResult.cs" />
+    <Compile Include="Response\AllSubscriptionsWithNextEpisodeResult.cs" />
     <Compile Include="Response\SearchTvShowResult.cs" />
   </ItemGroup>
   <ItemGroup />
