--- a/TvShowReminder.Service/TvShowReminder.Service.csproj
+++ b/TvShowReminder.Service/TvShowReminder.Service.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ISubscriptionQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\EpisodesToDateQueryHandler.cs" />
+    <Compile Include="Query\AllSubscriptionsWithNextEpisodeQueryHandler.cs" />
     <Compile Include="Query\SearchTvShowQueryHandler.cs" />
     <Compile Include="SubscriptionQueryService.cs" />
   </ItemGroup>
