--- a/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
+++ b/TvShowReminder.Unittests/TvShowReminder.Unittests.csproj
@@ -52,7 +52,9 @@
     <Compile Include="EpisodesCommandServiceTests.cs" />
     <Compile Include="EpisodesToDateQueryHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RefreshEpisodesCommandHandlerTests.cs" />
     <Compile Include="SearchTvShowQueryHandlerTests.cs" />
+    <Compile Include="UpdateEpisodesServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
