--- a/TvShowReminder.Service/TvShowReminder.Service.csproj
+++ b/TvShowReminder.Service/TvShowReminder.Service.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Command\DeleteSubscriptionCommandHandler.cs" />
     <Compile Include="Command\IUpdateEpisodesService.cs" />
     <Compile Include="Command\RefreshEpisodesCommandHandler.cs" />
+    <Compile Include="Command\UpdateEpisodesForAllSubscriptionsCommandHandler.cs" />
     <Compile Include="Command\UpdateEpisodesService.cs" />
     <Compile Include="EpisodesCommandService.cs" />
     <Compile Include="IEpisodesCommandService.cs" />
